@@ -1,54 +1,54 @@
 [team_color]
 side=1
-team_rgb=255,0,0,255,255,255,0,0,0
+team_rgb=255,0,0,255,255,255,0,0,0,255,0,0
 name= _ "Red"
 [/team_color]
 
 [team_color]
 side=2
-team_rgb=46,65,155,255,255,255,15,15,15
+team_rgb=46,65,155,255,255,255,15,15,15,46,65,155
 name= _ "Blue"
 [/team_color]
 
 [team_color]
 side=3
-team_rgb=98,182,100,255,255,255,0,0,0
+team_rgb=98,182,100,255,255,255,0,0,0,98,182,100
 name= _ "Green"
 [/team_color]
 
 [team_color]
 side=4
-team_rgb=147,0,157,255,255,255,0,0,0
+team_rgb=147,0,157,255,255,255,0,0,0,147,0,157
 name= _ "Purple"
 [/team_color]
 
 [team_color]
 side=7
-team_rgb=240,114,0,240,240,240,0,0,0
+team_rgb=240,114,0,240,240,240,0,0,0,240,114
 name= _ "Orange"
 [/team_color]
 
 [team_color]
 side=5
-team_rgb=90,90,90,255,255,255,0,0,0
+team_rgb=90,90,90,255,255,255,0,0,0,90,90,90
 name= _ "Black"
 [/team_color]
 
 [team_color]
 side=8
-team_rgb=225,225,225,255,255,255,30,30,30
+team_rgb=225,225,225,255,255,255,30,30,30,225,225,225
 name= _ "White"
 [/team_color]
 
 [team_color]
 side=6
-team_rgb=148,80,39,255,255,255,0,0,0
+team_rgb=148,80,39,255,255,255,0,0,0,148,80,39
 name= _ "Brown"
 [/team_color]
 
 [team_color]
 side=9
-team_rgb=48,203,192,255,255,255,0,0,0
+team_rgb=48,203,192,255,255,255,0,0,0,48,203,192
 name= _ "Teal"
 [/team_color]
 
