@@ -38,6 +38,7 @@ Version 1.3-svn:
    * show leader's name and colour at status table even when that team is fogged
      (patch #605)
  * WML engine
+   * added fourth color in team_rgb definitions for representative color in minimap
    * fixed terrain probabilities for terrains defined with rotations (bug #7274)
    * added a 'hide_help' key that prevents a unit type from being listed in the
      in-game help (bug #5701)
